kubernetes/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
    name: hefw-cms
spec: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: hefw-cms
  name: hefw-cms
  namespace: hefw-cms
spec:
  replicas: 1
  selector:
    matchLabels:
      run: hefw-cms
  template:
    metadata:
      labels:
        run: hefw-cms
        app: hefw-cms
    spec:
      containers:
      - image: ghcr.io/holoenfans/hef-website-cms:prod
        name: hefw-cms
      imagePullSecrets:
        - name: ghcr-secret
