kubernetes/ingress.yml
apiVersion: v1
kind: Service
metadata:
    name: cms
    namespace: hefw-cms
spec:
    ports:
        - port: 3001
    selector:
        app: hefw-cms

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: hefw-cms-ingress-https
    namespace: hefw-cms
spec:
    entryPoints:
        - websecure
    routes:
        - match: Host(`cms.holoen.fans`)
          kind: Rule
          services:
              - name: cms
                namespace: hefw-cms
                port: 3001
    tls:
        secretName: hefw-cms-cert
